--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <title>Pancito Feliz</title>
 </head>
 
-<body>
+<body class="body">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
